# arxiv-voice-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/agent/: models.py  service.py
app/asr/: base.py  faster_whisper.py  service.py
app/backend/: app.py  routes.py  schemas.py
app/graph/: builder.py  nodes.py  state.py
app/settings/: config.py  logging.py
app/tools/: arxiv_search.py
app/utils/: errors.py  files.py  temp_files.py
tests/: test_files.py  test_health.py  test_schemas.py  test_temp_files.py
